Dialog: Adjust southeast resize handle to not be visible and more closely match other resize handles. Fixes #4575 - Dialog: Scrollbar is difficult to use with overflow content and resize handle.

--- a/themes/base/jquery.ui.dialog.css
+++ b/themes/base/jquery.ui.dialog.css
@@ -60,10 +60,10 @@
 	cursor: pointer;
 }
 .ui-dialog .ui-resizable-se {
-	width: 14px;
-	height: 14px;
-	right: 3px;
-	bottom: 3px;
+	width: 12px;
+	height: 12px;
+	right: -5px;
+	bottom: -5px;
 }
 .ui-draggable .ui-dialog-titlebar {
 	cursor: move;
